--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Terraform
+name: Release
 
 on:
   push:
@@ -9,8 +9,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  terraform:
-    name: Terraform
+  release:
+    name: Release
     runs-on: ubuntu-latest
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v2
       - name: Print environment variables
         run: env | sort
       - name: Print directory tree
@@ -57,3 +59,8 @@ jobs:
           tf_actions_version: 0.14.8
           tf_actions_subcommand: apply
           tf_actions_working_dir: terraform/.
+      - name: Deploy Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: $(terraform output appServiceName)
+          package: AppServicePerf
