--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
     strategy:
       matrix:
         dotnet-version: ['5.0.x']
+    defaults:
+      run:
+        working-directory: ./AppServicePerf
     steps:
       - name: Checkout
         uses: actions/checkout@v2
