--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Print environment variables
+        run: env | sort
+      - name: Print directory tree
+        run: tree
       - name: Setup .Net Core SDK ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v1.7.2
         with:
@@ -35,10 +39,10 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          path: AppServicePerf/bin/Release/net5.0/publish/
+          path: $(GITHUB_WORKSPACE)/AppServicePerf/bin/Release/net5.0/publish
 
-  release:
-    name: Release
+  release-infrastructure:
+    name: Release-Infrastructure
     needs: build
     runs-on: ubuntu-latest
     env:
@@ -52,8 +56,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Download artifact
-        uses: actions/download-artifact@v2
       - name: Print environment variables
         run: env | sort
       - name: Print directory tree
@@ -87,8 +89,21 @@ jobs:
         with:
           tf_actions_version: 0.14.8
           tf_actions_subcommand: apply
-          tf_actions_working_dir: terraform/.
-      - name: Deploy Web App
+          tf_actions_working_dir: terraform/.d
+  release-webApp:
+    name: Release-WebApp
+    needs: release-infrastructure
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+      - name: Print environment variables
+        run: env | sort
+      - name: Print directory tree
+        run: tree
+      - name: Deploy WebApp
         uses: azure/webapps-deploy@v2
         with:
           app-name: $(terraform output appServiceName)
