--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -39,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          path: ${GITHUB_WORKSPACE}/AppServicePerf/bin/Release/net5.0/publish
+          path: "${GITHUB_WORKSPACE}/AppServicePerf/bin/Release/net5.0/publish"
 
   release-infrastructure:
     name: Release-Infrastructure
