--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set env
-        run: echo ::set-env name=workspace::$GITHUB_WORKSPACE
       - name: Print environment variables
         run: env | sort
       - name: Print directory tree
@@ -42,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          path: ${{ env.workspace }}/AppServicePerf/bin/Release/net5.0/publish
+          path: ${{ github.workspace }}/AppServicePerf/bin/Release/net5.0/publish
 
   release-infrastructure:
     name: Release-Infrastructure
