--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,8 +100,8 @@ jobs:
           tf_actions_working_dir: terraform/.
       - id: output
         run: |
-          APPSERVICENAME=$(echo ${{ steps.terraform_output.outputs.tf_actions_output }} | jq -r '.appServiceName.value')
-          echo "::set-output name=appServiceName::$APPSERVICENAME"
+          export APPSERVICENAME=$(echo ${{ steps.terraform_output.outputs.tf_actions_output }} | jq -r '.appServiceName.value')
+          echo "::set-output name=appServiceName::${APPSERVICENAME}"
       outputs:
         appServiceName: ${{ steps.output.outputs.appServiceName }}
 
