--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,7 +100,7 @@ jobs:
           tf_actions_working_dir: terraform/.
       - id: output
         run: |
-          export APPSERVICENAME=$(echo ${{ steps.terraform_output.outputs.tf_actions_output }} | jq -r '.appServiceName.value')
+          export APPSERVICENAME=$(echo "${{ steps.terraform_output.outputs.tf_actions_output }}" | jq -r '.appServiceName.value')
           echo "::set-output name=appServiceName::${APPSERVICENAME}"
     outputs:
       appServiceName: ${{ steps.output.outputs.appServiceName }}
