--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,9 +98,10 @@ jobs:
           tf_actions_version: 0.14.8 
           tf_actions_subcommand: output
           tf_actions_working_dir: terraform/.
-      - id: output
+      - name: Outputs
+        id: output
         run: |
-          export APPSERVICENAME=$(echo "${{ steps.terraform_output.outputs.tf_actions_output }}" | jq -r '.appServiceName.value')
+          export APPSERVICENAME=$(echo '${{ steps.terraform_output.outputs.tf_actions_output }}' | jq -r '.appServiceName.value')
           echo "::set-output name=appServiceName::${APPSERVICENAME}"
     outputs:
       appServiceName: ${{ steps.output.outputs.appServiceName }}
