--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,9 @@ jobs:
       TF_VAR_sqlServerAdminUsername: ${{ secrets.TF_VAR_sqlServerAdminUsername }}
       TF_VAR_sqlServerAdminPassword: ${{ secrets.TF_VAR_sqlServerAdminPassword }}
       TF_VAR_azureAdAdminObjectId: ${{ secrets.TF_VAR_azureAdAdminObjectId }}
+      TF_VAR_webAppClientId: ${{ secrets.WEB_APP_CLIENT_ID }}
+      TF_VAR_webAppDomain: ${{ secrets.WEB_APP_DOMAIN }}
+      TF_VAR_webAppTenantId: ${{ secrets.AZURE_AD_TENANT_ID }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
