--- a/AppServicePerf/AppServicePerf/appsettings.json
+++ b/AppServicePerf/AppServicePerf/appsettings.json
@@ -1,4 +1,16 @@
 {
+/*
+The following identity settings need to be configured
+before the project can be successfully executed.
+For more info see https://aka.ms/dotnet-template-ms-identity-platform 
+*/
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "",
+    "TenantId": "",
+    "ClientId": "",
+    "CallbackPath": "/signin-oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,10 +18,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "ClientId": "",
-    "TenantId": ""
-  }
+  "AllowedHosts": "*"
 }
