--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,4 +130,4 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ needs.release-infrastructure.outputs.appServiceName }}
-          package: AppServicePerf
+          package: artifact
