--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
       TF_VAR_sqlServerAdminPassword: ${{ secrets.TF_VAR_sqlServerAdminPassword }}
       TF_VAR_azureAdAdminObjectId: ${{ secrets.TF_VAR_azureAdAdminObjectId }}
       TF_VAR_webAppClientId: ${{ secrets.WEB_APP_CLIENT_ID }}
+      TF_VAR_webAppClientSecret: ${{ secrets.WEB_APP_CLIENT_SECRET }}
       TF_VAR_webAppDomain: ${{ secrets.WEB_APP_DOMAIN }}
       TF_VAR_webAppTenantId: ${{ secrets.AZURE_AD_TENANT_ID }}
     steps:
