--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,7 @@ jobs:
       TF_VAR_webAppClientSecret: ${{ secrets.WEB_APP_CLIENT_SECRET }}
       TF_VAR_webAppDomain: ${{ secrets.WEB_APP_DOMAIN }}
       TF_VAR_webAppTenantId: ${{ secrets.AZURE_AD_TENANT_ID }}
+      TF_VAR_githubActionsObjectId: ${{ secrets.TF_VAR_githubActionsObjectId }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
