--- a/AppServicePerf/AppServicePerf/appsettings.json
+++ b/AppServicePerf/AppServicePerf/appsettings.json
@@ -1,9 +1,4 @@
 {
-  /*
-The following identity settings need to be configured
-before the project can be successfully executed.
-For more info see https://aka.ms/dotnet-template-ms-identity-platform 
-*/
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "",
@@ -20,5 +15,8 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     }
   },
   "AllowedHosts": "*",
-  "CacheConnection":  ""
+  "CacheCredentials": "",
+  "ConnectionStrings": {
+    "AppServicePerfContext": "Server=(localdb)\\mssqllocaldb;Database=AppServicePerfContext-936c0854-a621-4339-af85-0e0e7549afa0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
