--- a/AppServicePerf/AppServicePerf/appsettings.json
+++ b/AppServicePerf/AppServicePerf/appsettings.json
@@ -17,6 +17,19 @@
   "AllowedHosts": "*",
   "CacheCredentials": "",
   "ConnectionStrings": {
-    "AppServicePerfContext": "Server=(localdb)\\mssqllocaldb;Database=AppServicePerfContext-936c0854-a621-4339-af85-0e0e7549afa0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AppServicePerfContext": ""
+  },
+  "Storage": {
+    "ServiceUri": ""
+  },
+  "AzureDefaults": {
+    "Diagnostics": {
+      "IsTelemetryDisabled": false,
+      "IsLoggingContentEnabled": true
+    },
+    "Retry": {
+      "MaxRetries": 3,
+      "Mode": "Exponential"
+    }
   }
 }
