--- a/AppServicePerf/AppServicePerf/appsettings.json
+++ b/AppServicePerf/AppServicePerf/appsettings.json
@@ -17,7 +17,8 @@
   "AllowedHosts": "*",
   "CacheCredentials": "",
   "ConnectionStrings": {
-    "AppServicePerfContext": ""
+    "AppServicePerfContext": "",
+    "RedisCache":  ""
   },
   "Storage": {
     "ServiceUri": ""
@@ -31,5 +32,5 @@
       "MaxRetries": 3,
       "Mode": "Exponential"
     }
-  }
+  }  
 }
