--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
         run: terraform plan
       - name: Terraform Apply
         id: apply
-        run: terraform apply -var-file=${{ env.environment }}
+        run: terraform apply -var-file=environments/${{ env.environment }}.tfvars
       - name: 'Terraform Output'
         id: terraform_output
         run: terraform output
