--- a/.github/workflows/cleanup-artifacts.yml
+++ b/.github/workflows/cleanup-artifacts.yml
@@ -8,10 +8,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  greet:
+  cleanup:
     runs-on: ubuntu-latest
     steps:
     - name: Delete Package Versions
       uses: actions/delete-package-versions@v1.0.3
       with:
-        num-old-versions-to-delete: 1
+        package-name: 'artifact'
+        num-old-versions-to-delete: 10
