--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,7 @@ jobs:
           tf_actions_version: 0.14.8
           tf_actions_subcommand: plan
           tf_actions_working_dir: terraform/.
+          args: '-var-file=${{ env.environment }}.tfvars'
       - name: Terraform Apply
         uses: hashicorp/terraform-github-actions@master
         with:
