--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,13 +93,13 @@ jobs:
           tf_actions_version: 0.14.8
           tf_actions_subcommand: plan
           tf_actions_working_dir: terraform/.
-          args: '-var-file=${{ env.environment }}.tfvars'
+          args: '-var-file=environments/${{ env.environment }}.tfvars'
       - name: Terraform Apply
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.14.8
           tf_actions_subcommand: apply
-          args: '-var-file=${{ env.environment }}.tfvars'
+          args: '-var-file=environments/${{ env.environment }}.tfvars'
           tf_actions_working_dir: terraform/.
       - name: 'Terraform Output'
         id: terraform_output
