--- a/.github/workflows/cleanup-artifacts.yml
+++ b/.github/workflows/cleanup-artifacts.yml
@@ -11,9 +11,6 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     steps:
-    - name: Delete Package Versions
-      uses: smartsquaregmbh/delete-old-packages@v0.3.1
-      with:
-        keep: 5
-        names: |
-          artifact
+    - name: Remove package versions
+      id: remove-package-versions
+      uses: epitomeglobal/remove-package-versions@master
