--- a/ado/azure-pipeline.yml
+++ b/ado/azure-pipeline.yml
@@ -77,11 +77,16 @@ stages:
   #               environmentName: ${{ variables.testEnvironmentName }}
   #               pathToTerraformDirectory: ${{ variables.pathToTerraformDirectory }}
   #               pathToTerraformVariableDirectory: ${{ variables.pathToTerraformVariableDirectory }}
-  #           - task: ManualValidation@0
-  #             timeoutInMinutes: 1440 # task times out in 1 day
-  #             inputs:
-  #               instructions: 'Please validate the deployment and resume'
-  #               onTimeout: 'resume'
+    # - job: waitForValidation
+    #   displayName: Wait for validation
+    #   pool: server
+    #   timeoutInMinutes: 4320 # job times out in 3 days
+    #   steps:
+    #   - task: ManualValidation@0
+    #     timeoutInMinutes: 1440 # task times out in 1 day
+    #     inputs:
+    #       instructions: 'Please validate the deployment and resume'
+    #       onTimeout: 'resume'
 
   # - stage: Prod
   #   dependsOn: Test
@@ -106,3 +111,13 @@ stages:
   #               environmentName: ${{ variables.prodEnvironmentName }}
   #               pathToTerraformDirectory: ${{ variables.pathToTerraformDirectory }}
   #               pathToTerraformVariableDirectory: ${{ variables.pathToTerraformVariableDirectory }}
+    # - job: waitForValidation
+    #   displayName: Wait for validation
+    #   pool: server
+    #   timeoutInMinutes: 4320 # job times out in 3 days
+    #   steps:
+    #   - task: ManualValidation@0
+    #     timeoutInMinutes: 1440 # task times out in 1 day
+    #     inputs:
+    #       instructions: 'Please validate the deployment and resume'
+    #       onTimeout: 'resume'
