--- a/ado/build.yml
+++ b/ado/build.yml
@@ -18,7 +18,7 @@ steps:
       command: build
       arguments: --configuration ${{ parameters.configuration }} --no-restore
       projects: |
-        ${{ parameters.pathToWebAppProjectDirectory }}/${{ parameters.webAppProjectName }}
+        ${{ parameters.pathToWebAppProjectDirectory }}/${{ parameters.webAppProjectName }}.csproj
   - task: DotNetCoreCLI@2
     displayName: Test
     inputs:
