--- a/ado/build.yml
+++ b/ado/build.yml
@@ -19,5 +19,5 @@ steps:
       arguments: --configuration ${{ parameters.configuration }} --no-restore
       projects: |
         ${{ parameters.pathToWebAppProjectDirectory }}/${{ parameters.webAppProjectName }}.csproj
-  - publish: $(System.DefaultWorkingDirectory)/${{ parameters.pathToWebAppProjectDirectory}}/bin/${{ parameters.configuration}}/net5.0
+  - publish: ${{ parameters.pathToWebAppProjectDirectory}}/bin/${{ parameters.configuration}}/net5.0
     artifact: ${{ parameters.artifactName }}
