--- a/ado/azure-pipeline.yml
+++ b/ado/azure-pipeline.yml
@@ -45,6 +45,7 @@ stages:
                 pathToTerraformVariableDirectory: ${{ variables.pathToTerraformVariableDirectory }}
     - job: waitForValidation
       displayName: Wait for validation
+      dependsOn: Dev_Deploy
       pool: server
       timeoutInMinutes: 4320 # job times out in 3 days
       steps:
@@ -79,6 +80,7 @@ stages:
   #               pathToTerraformVariableDirectory: ${{ variables.pathToTerraformVariableDirectory }}
     # - job: waitForValidation
     #   displayName: Wait for validation
+    #   dependsOn: Test_Deploy
     #   pool: server
     #   timeoutInMinutes: 4320 # job times out in 3 days
     #   steps:
@@ -111,13 +113,3 @@ stages:
   #               environmentName: ${{ variables.prodEnvironmentName }}
   #               pathToTerraformDirectory: ${{ variables.pathToTerraformDirectory }}
   #               pathToTerraformVariableDirectory: ${{ variables.pathToTerraformVariableDirectory }}
-    # - job: waitForValidation
-    #   displayName: Wait for validation
-    #   pool: server
-    #   timeoutInMinutes: 4320 # job times out in 3 days
-    #   steps:
-    #   - task: ManualValidation@0
-    #     timeoutInMinutes: 1440 # task times out in 1 day
-    #     inputs:
-    #       instructions: 'Please validate the deployment and resume'
-    #       onTimeout: 'resume'
