--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -15,6 +15,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Format
     inputs:
+      provider: azurerm
       command: fmt
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       environmentServiceNameAzureRM: ${{ parameters.environmentServiceNameAzureRM }}
@@ -26,6 +27,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Initialize
     inputs:
+      provider: azurerm
       command: init
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       environmentServiceNameAzureRM: ${{ parameters.environmentServiceNameAzureRM }}
@@ -37,6 +39,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Validate
     inputs:
+      provider: azurerm
       command: validate
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       environmentServiceNameAzureRM: ${{ parameters.environmentServiceNameAzureRM }}
@@ -48,6 +51,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Plan
     inputs:
+      provider: azurerm
       command: plan
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       environmentServiceNameAzureRM: ${{ parameters.environmentServiceNameAzureRM }}
@@ -59,6 +63,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Apply
     inputs:
+      provider: azurerm
       command: apply
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       commandOptions: '-var-file=environments/${{ parameters.environmentName }}.tfvars'
