--- a/ado/environments/global.yml
+++ b/ado/environments/global.yml
@@ -8,5 +8,6 @@ variables:
   pathToTerraformDirectory: $(System.DefaultWorkingDirectory)/terraform
   pathToTerraformVariableDirectory: $(SystemDefaultWorkingDirectory)/terraform/environments
   pathToWebAppProjectDirectory: $(System.DefaultWorkingDirectory)/AppServicePerf/AppServicePerf
+  serviceConnectionName: jordanbean-aia
   webAppProjectName: AppServicePerf
   System.Debug: true
