--- a/ado/azure-pipeline.yml
+++ b/ado/azure-pipeline.yml
@@ -35,7 +35,6 @@ stages:
               parameters:
                 appServiceName: ${{ variables.appServiceName }}
                 artifactName: ${{ variables.artifactName }}
-                azureSubscriptionId: ${{ variables.azureSubscriptionName }}
                 backendAzureRmContainerName: ${{ variables.backendAzureRmContainerName}}
                 backendAzureRmKey: ${{ variables.backendAzureRmKey }}
                 backendAzureRmResourceGroupName: ${{ variables.backendAzureRmResourceGroupName }}
@@ -43,6 +42,7 @@ stages:
                 environmentName: ${{ variables.devEnvironmentName }}
                 pathToTerraformDirectory: ${{ variables.pathToTerraformDirectory }}
                 pathToTerraformVariableDirectory: ${{ variables.pathToTerraformVariableDirectory }}
+                serviceConnectionName: ${{ variables.serviceConnectionName }}
     - job: waitForValidation
       displayName: Wait for validation
       dependsOn: Dev_Deploy
@@ -70,7 +70,7 @@ stages:
   #             parameters:
   #               appServiceName: ${{ variables.appServiceName }}
   #               artifactName: ${{ variables.artifactName }}
-  #               azureSubscriptionId: ${{ variables.azureSubscriptionName }}
+  #               serviceConnectionName: ${{ variables.serviceConnectionName }}
   #               backendAzureRmContainerName: ${{ variables.backendAzureRmContainerName}}
   #               backendAzureRmKey: ${{ variables.backendAzureRmKey }}
   #               backendAzureRmResourceGroupName: ${{ variables.backendAzureRmResourceGroupName }}
@@ -105,7 +105,7 @@ stages:
   #             parameters:
   #               appServiceName: ${{ variables.appServiceName }}
   #               artifactName: ${{ variables.artifactName }}
-  #               azureSubscriptionId: ${{ variables.azureSubscriptionName }}
+  #               serviceConnectionName: ${{ variables.serviceConnectionName }}
   #               backendAzureRmContainerName: ${{ variables.backendAzureRmContainerName}}
   #               backendAzureRmKey: ${{ variables.backendAzureRmKey }}
   #               backendAzureRmResourceGroupName: ${{ variables.backendAzureRmResourceGroupName }}
