--- a/ado/deploy.yml
+++ b/ado/deploy.yml
@@ -20,11 +20,11 @@ steps:
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
       backendServiceArm: ${{ parameters.serviceConnectionName }}
       environmentName: ${{ parameters.environmentName }}
-      environmentServiceNameAzureRM: ${{ parameters.azureSubscriptionId }}
+      environmentServiceNameAzureRM: ${{ parameters.serviceConnectionName }}
       pathToTerraformDirectory: ${{ parameters.pathToTerraformDirectory }}
       pathToTerraformVariableDirectory: ${{ parameters.pathToTerraformVariableDirectory }}
   - template: deployWebApp.yml
     parameters:
       appServiceName: ${{ parameters.appServiceName }}
       artifactName: ${{ parameters.artifactName }}
-      azureSubscriptionId: ${{ parameters.azureSubscriptionId }}
+      serviceConnectionName: ${{ parameters.serviceConnectionName }}
