--- a/ado/build.yml
+++ b/ado/build.yml
@@ -19,5 +19,10 @@ steps:
       arguments: --configuration ${{ parameters.configuration }} --no-restore
       projects: |
         ${{ parameters.pathToWebAppProjectDirectory }}/${{ parameters.webAppProjectName }}.csproj
-  - publish: ${{ parameters.pathToWebAppProjectDirectory}}/bin/${{ parameters.configuration}}/net5.0
+  - task: DotNetCoreCLI@2
+    displayName: Publish
+    inputs:
+      command: publish
+      arguments: -c ${{ parameters.configuration }} -o $(Build.ArtifactStagingDirectory)
+  - publish: $(Build.ArtifactStagingDirectory)
     artifact: ${{ parameters.artifactName }}
