--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -15,6 +15,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Format
     inputs:
+      provider: 'azurerm'
       command: 'fmt'
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       backendServiceArm: ${{ parameters.backendServiceArm }}
@@ -25,6 +26,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Initialize
     inputs:
+      provider: 'azurerm'
       command: 'init'
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       backendServiceArm: ${{ parameters.backendServiceArm }}
@@ -35,6 +37,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Validate
     inputs:
+      provider: 'azurerm'
       command: 'validate'
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       backendServiceArm: ${{ parameters.backendServiceArm }}
@@ -45,6 +48,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Plan
     inputs:
+      provider: 'azurerm'
       command: 'plan'
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       backendServiceArm: ${{ parameters.backendServiceArm }}
@@ -55,6 +59,7 @@ steps:
   - task: TerraformTaskV2@2
     displayName: Terraform - Apply
     inputs:
+      provider: 'azurerm'
       command: 'apply'
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       commandOptions: '-var-file=environments/${{ parameters.environmentName }}.tfvars'
