--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -13,7 +13,7 @@ steps:
   - task: TerraformInstaller@0
     displayName: Install Terraform
     inputs:
-      version: 1.0.0
+      terraformVersion: 1.0.0
   - task: TerraformTaskV2@2
     displayName: Terraform - Format
     inputs:
