--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -14,55 +14,40 @@ steps:
     displayName: Install Terraform
     inputs:
       terraformVersion: 1.0.0
-  - task: TerraformTaskV1@1
-    displayName: Terraform - Format
-    inputs:
-      provider: 'azurerm'
-      command: 'fmt'
-      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      backendServiceArm: ${{ parameters.backendServiceArm }}
-      backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
-      backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
-      backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
-      backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-  - task: TerraformTaskV1@1
+  - task: TerraformTaskV2@2
     displayName: Terraform - Initialize
     inputs:
-      provider: 'azurerm'
-      command: 'init'
+      command: init
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
       backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
       backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-  - task: TerraformTaskV1@1
+  - task: TerraformTaskV2@2
     displayName: Terraform - Validate
     inputs:
-      provider: 'azurerm'
-      command: 'validate'
+      command: validate
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
       backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
       backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-  - task: TerraformTaskV1@1
+  - task: TerraformTaskV2@2
     displayName: Terraform - Plan
     inputs:
-      provider: 'azurerm'
-      command: 'plan'
+      command: plan
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
       backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
       backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-  - task: TerraformTaskV1@1
+  - task: TerraformTaskV2@2
     displayName: Terraform - Apply
     inputs:
-      provider: 'azurerm'
-      command: 'apply'
+      command: apply
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       commandOptions: '-var-file=environments/${{ parameters.environmentName }}.tfvars'
       backendServiceArm: ${{ parameters.backendServiceArm }}
