--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -39,7 +39,7 @@ steps:
     inputs:
       command: plan
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      commandOptions: '-var-file=environments/${{ parameters.environmentName }}.tfvars'
+      commandOptions: '-var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.environmentName }}.tfvars'
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
@@ -51,7 +51,7 @@ steps:
     inputs:
       command: apply
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      commandOptions: '-var-file=environments/${{ parameters.environmentName }}.tfvars'
+      commandOptions: '-var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.environmentName }}.tfvars'
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
