--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -10,6 +10,13 @@ parameters:
   - name: backendAzureRmKey
   
 steps:
+  - task: AzurePowerShell@5
+    displayName: Get Pipeline Service Principal Object Id
+    inputs:
+      azureSubscription: ${{ parameters.backendServiceArm }}
+      Inline: |
+        $context = Get-AzContext
+        echo '##vso[task.setvariable variable=TF_VAR_pipelineObjectId]$context.Account.Id'
   - task: TerraformInstaller@0
     displayName: Install Terraform
     inputs:
